--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -10,8 +10,19 @@ jobs:
     name: Deploy plugin for new Tag
     runs-on: ubuntu-latest
     steps:
-   
       - uses: actions/checkout@v4
+      - name: Use desired version of php
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
+      - name: Composer install and build # Remove or modify this step as needed
+        run: |
+          composer install
+          composer update
+          composer install --no-dev
+          composer dump-autoload -o
+      
+
       - name: Use Node.js 12.1.0
         uses: actions/setup-node@v4
         with:
@@ -23,20 +34,3 @@ jobs:
           npm install -g grunt-cli
           npm i
           grunt release
-      # - name: Use desired version of php
-      #   uses: shivammathur/setup-php@v2
-      #   with:
-      #     php-version: '7.4'
-      # - name: Composer install and build # Remove or modify this step as needed
-      #   run: |
-      #     composer install
-      #     composer update
-      #     composer dump-autoload -o
-      #     composer install --no-dev
-      #     composer dump-autoload -o
-      # - name: Generate zip
-      #   uses: 10up/action-wordpress-plugin-build-zip@stable
-      #   with:
-      #     retention-days: 5
-        # env:
-        #  SLUG: wedevs-project-manager # optional, remove if GitHub repo name matches SVN slug, including capitalization
