--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -1,36 +1,41 @@
 name: Deploy to WordPress.org
 on:
   push:
-    tags:
-      - "*"
+    branches:
+      - "*"  # Triggers on all branches; adjust as needed if you want to restrict to a specific branch (e.g., "main" or "develop")
+
 permissions:
   contents: write
+
 jobs:
   tag:
-    name: Deploy plugin for new Tag
+    name: Deploy plugin on Push
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use desired version of php
+
+      - name: Use desired version of PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '7.4'
+
       - name: Composer install and build # Remove or modify this step as needed
         run: |
           composer install
           composer update
           composer install --no-dev
           composer dump-autoload -o
-      
 
       - name: Use Node.js 12.1.0
         uses: actions/setup-node@v4
         with:
           node-version: 12.1.0
+
       - uses: actions/checkout@master
+
       - name: Npm install and build
         run: |
-          rm -r package-lock.json
+          rm -f package-lock.json
           npm install -g grunt-cli
           npm i
           grunt release
