--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -8,7 +8,7 @@ permissions:
 jobs:
   tag:
     name: Deploy plugin for new Tag
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
    
       - uses: actions/checkout@v4
