--- a/.gitattributes
+++ b/.gitattributes
@@ -1,30 +1,25 @@
-# Ignore all hidden files and directories
+# Ignore hidden files
 /.* export-ignore
 
-# Ignore all markdown files
+# Ignore documentation files
 /*.md export-ignore
 
-# Ignore following directories and contents
+# Ignore directories
 /node_modules* export-ignore
 /tests export-ignore
 /bin export-ignore
 
-# Ignore following configuration files
+# Ignore config and build files
 /phpcs.xml export-ignore
 /phpunit.* export-ignore
-/composer.lock export-ignore
-/composer.json export-ignore
+/composer.* export-ignore
 /CODEOWNERS export-ignore
 /renovate.json export-ignore
 /webpack.config.js export-ignore
 /postcss.config.js export-ignore
 /bundlesize.config.json export-ignore
-/package.json export-ignore
-/package-lock.json export-ignore
+/package*.json export-ignore
 /babel.config.js export-ignore
 /docker-compose.yml export-ignore
 /globals.d.ts export-ignore
-/tsconfig.json export-ignore
-/tsconfig.base.json export-ignore
-/tsconfig.base export-ignore
-/webpack.config.js export-ignore
+/tsconfig.* export-ignore
