--- a/.gitattributes
+++ b/.gitattributes
@@ -1,25 +1,30 @@
-# Ignore hidden files
+# Ignore all hidden files and directories
 /.* export-ignore
 
-# Ignore documentation files
+# Ignore all markdown files
 /*.md export-ignore
 
-# Ignore directories
+# Ignore following directories and contents
 /node_modules* export-ignore
 /tests export-ignore
 /bin export-ignore
 
-# Ignore config and build files
+# Ignore following configuration files
 /phpcs.xml export-ignore
 /phpunit.* export-ignore
-/composer.* export-ignore
+/composer.lock export-ignore
+/composer.json export-ignore
 /CODEOWNERS export-ignore
 /renovate.json export-ignore
 /webpack.config.js export-ignore
 /postcss.config.js export-ignore
 /bundlesize.config.json export-ignore
-/package*.json export-ignore
+/package.json export-ignore
+/package-lock.json export-ignore
 /babel.config.js export-ignore
 /docker-compose.yml export-ignore
 /globals.d.ts export-ignore
-/tsconfig.* export-ignore
+/tsconfig.json export-ignore
+/tsconfig.base.json export-ignore
+/tsconfig.base export-ignore
+/webpack.config.js export-ignore
