--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -1,3 +1,5 @@
+name: Deploy to WordPress.org
+
 on:
   push:
     branches:
@@ -44,15 +46,31 @@ jobs:
           composer install --no-dev
           composer dump-autoload -o
 
-      # Step 7: Upload the ZIP file as an artifact (optional)
+      # Step 6: Generate the WordPress plugin ZIP file
+      - name: Generate ZIP file for WordPress plugin
+        uses: 10up/action-wordpress-plugin-build-zip@stable
+        with:
+          retention-days: 5  # Optional: Specify how many days to retain the generated artifact
+        env:
+          SLUG: wedevs-project-manager  # Optional: Specify plugin slug if different from repo name
+
+      # Step 7: Move the generated ZIP file into a specific folder (plugin_zip)
+      - name: Move the ZIP file to a folder
+        run: |
+          # Ensure the folder exists
+          mkdir -p ${{ github.workspace }}/plugin_zip
+          # Move the generated ZIP file into the plugin_zip folder
+          mv ${{ github.workspace }}/${{ github.repository }}.zip ${{ github.workspace }}/plugin_zip/
+
+      # Step 8: Upload the ZIP file as an artifact (optional)
       - name: Upload the ZIP file as an artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}
-          path: ./wp-project-manager/  # Path to the generated ZIP file
+          name: ${{ github.repository }}  # Name of the artifact
+          path: ${{ github.workspace }}/plugin_zip/${{ github.repository }}.zip  # Path to the ZIP file
           retention-days: 5  # Optional: Artifact retention
 
-      # Step 8: Deploy the ZIP file directly to FTP server
+      # Step 9: Deploy the ZIP file directly to FTP server
       - name: Deploy the ZIP file to FTP Server
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
@@ -60,6 +78,6 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT }}  # Optional: defaults to 21 for FTP
-          local-dir: ${{ github.workspace }}/  # Path to the generated ZIP file
+          local-dir: ${{ github.workspace }}/plugin_zip/  # Path to the folder containing the ZIP file
           server-dir: /wp-project-manager/  # Remote directory on the FTP server
           protocol: ftp  # Specify 'sftp' if using SFTP
