--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           retention-days: 5
         env:
-         SLUG: wedevs-project-manager # optional, remove if GitHub repo name matches SVN slug, including capitalization
+         SLUG: blog-reading-progress-bar # optional, remove if GitHub repo name matches SVN slug, including capitalization
 
       - name: WordPress Plugin Deploy
         uses: 10up/action-wordpress-plugin-deploy@stable
