--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -41,12 +41,4 @@ jobs:
         with:
           retention-days: 5
         env:
-         SLUG: blog-reading-progress-bar # optional, remove if GitHub repo name matches SVN slug, including capitalization
-
-      - name: WordPress Plugin Deploy
-        uses: 10up/action-wordpress-plugin-deploy@stable
-        env:
-          SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
-          SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
-          SLUG: blog-reading-progress-bar
-        
+         SLUG: wed-project-manager # optional, remove if GitHub repo name matches SVN slug, including capitalization
