--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -42,3 +42,11 @@ jobs:
           retention-days: 5
         env:
          SLUG: wedevs-project-manager # optional, remove if GitHub repo name matches SVN slug, including capitalization
+      - name: WordPress Plugin Deploy
+        uses: 10up/action-wordpress-plugin-deploy@stable
+        with:
+          dry-run: true
+        env:
+          SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
+          SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
+          SLUG: wedevs-project-manager
