--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -38,11 +38,16 @@ jobs:
           composer dump-autoload -o
           composer install --no-dev
           composer dump-autoload -o
+      - name: Generate zip
+        uses: 10up/action-wordpress-plugin-build-zip@stable
+        with:
+          retention-days: 5
+        env:
+          SLUG: wedevs-project-manager # optional, remove if GitHub repo name matches SVN slug, including capitalization
       - name: WordPress Plugin Deploy
         uses: 10up/action-wordpress-plugin-deploy@stable
         with:
           dry-run: true
-          generate-zip: true
         env:
           SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
           SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
