--- a/.distignore
+++ b/.distignore
@@ -1,16 +1,7 @@
-# Exclude specific directories
 /.wordpress-org
 /.git
 /.github
-/node_modules
-/build
-/tests
-/bin
-/tmp
-/assets/less
-/nbproject
 
-# Exclude specific files and configurations
 .babelrc
 .distignore
 .editorconfig
@@ -19,22 +10,35 @@
 .gitignore
 .svnignore
 .gitmodules
+
+/node_modules
+/build
+/tests
+/bin
 Gruntfile.js
 package.json
 package-lock.json
 phpcs.ruleset.xml
 phpunit.xml.dist
-phpunit.xml
 webpack.config.js
+/tmp
+/views/assets/src
 src/Pusher/webpack.config.js
 /src/Pusher/views/assets/src
 debug.log
+phpunit.xml
 export.sh
 npm-debug.log
 plugin-deploy.sh
+readme.md
+composer.json
+composer.lock
 composer.phar
 secret.json
 codeception.yml
+/assets/less
+/tests
+nbproject
 phpcs-report.txt
 phpcs.xml.dist
 pm.sublime-project
@@ -42,9 +46,3 @@ pm.sublime-workspace
 postman_collection.json
 views/assets/css/Single Task Page.json
 views/assets/vendor/wp-hooks/wp-hooks.js
-
-
-# Re-include essential files within vendor
-!vendor/**/composer.json
-!vendor/**/readme.md
-!vendor/**/README.md
