--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -20,13 +20,17 @@ jobs:
         run: |
           sudo apt-get update --allow-releaseinfo-change
           sudo apt-get install -y python3 make g++ build-essential
-          npm config set python python3
 
       - uses: actions/checkout@v4
       - name: Use Node.js 12.1.0
         uses: actions/setup-node@v4
         with:
           node-version: 12.1.0
+          
+      - name: Set Python for node-gyp
+        run: |
+          export PYTHON=$(which python3)
+
       - uses: actions/checkout@master
       - name: Npm install and build
         run: |
