--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 12.1.0
-          
+
       - name: Set Python for node-gyp
         run: |
           export PYTHON=$(which python3)
@@ -48,12 +48,12 @@ jobs:
           composer dump-autoload -o
           composer install --no-dev
           composer dump-autoload -o
-      - name: Generate zip
-        uses: 10up/action-wordpress-plugin-build-zip@stable
-        with:
-          retention-days: 5
-        env:
-          SLUG: wedevs-project-manager # optional, remove if GitHub repo name matches SVN slug, including capitalization
+      # - name: Generate zip
+      #   uses: 10up/action-wordpress-plugin-build-zip@stable
+      #   with:
+      #     retention-days: 5
+      #   env:
+      #     SLUG: wedevs-project-manager # optional, remove if GitHub repo name matches SVN slug, including capitalization
       - name: WordPress Plugin Deploy
         uses: 10up/action-wordpress-plugin-deploy@stable
         with:
