--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -47,7 +47,7 @@ jobs:
           composer install --no-dev
           composer dump-autoload -o
       - name: WordPress Plugin Deploy
-        uses: 10up/action-wordpress-plugin-deploy@stable
+        uses: 10up/action-wordpress-plugin-deploy@2.3.0
         with:
           dry-run: true
         env:
