--- a/.github/workflows/deploy-org.yml
+++ b/.github/workflows/deploy-org.yml
@@ -16,25 +16,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up environment prerequisites
-        run: |
-          sudo apt-get update --allow-releaseinfo-change
-          sudo apt-get install -y python3 make g++ build-essential
-      - uses: actions/checkout@v4
       - name: Use Node.js 12.1.0
         uses: actions/setup-node@v4
         with:
           node-version: 12.1.0
-      - name: Set Python for node-gyp
-        run: |
-          export PYTHON=$(which python3)
       - uses: actions/checkout@master
       - name: Npm install and build
         run: |
           npm i --legacy-peer-deps
           npm run build
           npm run makepot
+      - name: Fix apt repository label change
+        run: sudo apt-get update --allow-releaseinfo-change
       - name: Use desired version of php
         uses: shivammathur/setup-php@v2
         with:
